--- a/static/index.html
+++ b/static/index.html
@@ -8,12 +8,11 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Philip Guo</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Zhaoqi He</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Philip Guo is an assistant professor of cognitive science at UC San Diego (Go Tritons!). His research spans human-computer interaction, online learning, and computing education.</p>
-
+    <p>Zhaoqi is an Junior level undergraduate Computer Science Major at UCSD. He prefers to go by the name "George".</p>
 	<h4>Projects</h4>
 	<ol>
 		<li>Design Thinking</li>
